[package]
name = "pza-plugin-fakes"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]


[dependencies]

panduza-platform-core = { path = "C:/Users/rodriguez.NET/Documents/workspace/50-PROJET/XX-XXXX-PZA/panduza-platform-core" }


# Main async framework for the platform
tokio = { version = "1", features = ["full"] }
